--- a/server/client/index.html
+++ b/server/client/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="@angular2-material/core/style/core.css" rel="stylesheet">
+    <link href="node_modules/@angular2-material/core/style/core.css" rel="stylesheet">
+    <link href="node_modules/@angular2-material/icon/icon.css" rel="stylesheet">
+    <link href="node_modules/@angular2-material/button/button.css" rel="stylesheet">
     <!-- FontAwesome for md-icon demo. -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     
