fixed server and client projects. added initial setup for pokemon api.

--- a/server/client/app/index.html
+++ b/server/client/app/index.html
@@ -4,12 +4,12 @@
     <script>document.write('<base href="' + document.location + '" />');</script>
     <title>Angular 2 Playground</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="node_modules/@angular2-material/core/style/core.css" rel="stylesheet">
-    <link href="node_modules/@angular2-material/icon/icon.css" rel="stylesheet">
-    <link href="node_modules/@angular2-material/button/button.css" rel="stylesheet">
+    <link href="/node_modules/@angular2-material/core/style/core.css" rel="stylesheet">
+    <link href="/node_modules/@angular2-material/icon/icon.css" rel="stylesheet">
+    <link href="/node_modules/@angular2-material/button/button.css" rel="stylesheet">
     <!-- FontAwesome for md-icon demo. -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     
@@ -103,15 +103,15 @@
     </script>
     <!-- 1. Load libraries -->
      <!-- Polyfill(s) for older browsers -->
-    <script src="node_modules/core-js/client/shim.min.js"></script>
+    <script src="/node_modules/core-js/client/shim.min.js"></script>
 
-    <script src="node_modules/zone.js/dist/zone.js"></script>
-    <script src="node_modules/reflect-metadata/Reflect.js"></script>
-    <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <script src="/node_modules/zone.js/dist/zone.js"></script>
+    <script src="/node_modules/reflect-metadata/Reflect.js"></script>
+    <script src="/node_modules/systemjs/dist/system.src.js"></script>
     
 
     <!-- 2. Configure SystemJS -->
-    <script src="systemjs.config.js"></script>
+    <script src="/systemjs.config.js"></script>
     <script>
       System.import('app').catch(function(err){ console.error(err); });
     </script>
